--- a/.env
+++ b/.env
@@ -34,10 +34,12 @@ DATABASE_URL=mysql://root@127.0.0.1:3306/bazza
 ###> symfony/messenger ###
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=doctrine://default
-# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+MESSENGER_TRANSPORT_LOCO_DSN=loco://API_KEY@default
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
 # MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
+LOCO_DSN=loco://API_KEY@default
+
