--- a/config/packages/translation.yaml
+++ b/config/packages/translation.yaml
@@ -4,10 +4,10 @@ framework:
         default_path: '%kernel.project_dir%/translations'
         fallbacks:
             - en
-#        providers:
-#            crowdin:
-#                dsn: '%env(CROWDIN_DSN)%'
-#            loco:
-#                dsn: '%env(LOCO_DSN)%'
+        providers:
+                loco:
+                    dsn: '%env(LOCO_DSN)%'
+                    domains: ['messages']
+                    locales: [:at, :de, :ch_de, :ch_fr, :fr, :int_en, :int_fr]
 #            lokalise:
 #                dsn: '%env(LOKALISE_DSN)%'
