--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,8 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+contact:
+    path:       /{_locale}/home
+    controller: App\Controller\HomeController::index
+    requirements:
+        _locale: en|fr|de
